FIX: One repo alignment

--- a/src/components/Repositories.css
+++ b/src/components/Repositories.css
@@ -1,6 +1,6 @@
 #repositories {
   width: 100%;
-  min-height: 500px;
+  min-height: 200px;
   margin: 0;
   padding: 0;
 }
